完成消息格式重新定义
